# Volatility-Based-Portfolio-Manager

./: .gitignore  CMakeLists.txt  README.md  data.csv  environment.yml  stock_data.csv  test.csv
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: index.rst
src/: CMakeLists.txt  a.out  data.csv  eigen.cpp  extractor.cpp  extractor.h  extractor.py  formula.h  main.cpp  mcmc  mcmc.cpp  monte_carlo  monte_carlo.cpp  montecarlo.cpp  portfolio_manager.h  read_from_csv.cpp  read_from_csv.h  stock_data.csv  stock_manager.h  test.cpp  testsofia.cpp  volatility.cpp  volatility_formula.h  volatility_parse.h
tests/: CMakeLists.txt  test_monte_carlo.cpp  test_volatility.cpp
